# hse-2019-cpp

01-190906p/: Makefile  foo.c  foo.h  main.c
02-190913p/: 02-print-arr.c  03-strlen.c  04-strcpy.c
03-190920/: plan.md
03-190920p/: 01-arr.c  02-arr-out.c  03-arr-heap.c  04-assert.c
04-190927/: plan.md
04-190927p/: 01-struct.c  02-recursion.c  03-lists.c  04-double-linked-list.c  05-intrusive.c  intrusive-01.txt  intrusive-02.txt
05-191004/: plan.md
05-191004p/: plan.md
06-191011/: plan.md
07-191018/: plan.md
07-191018p/: README.md  elements.c  phonebook.xml
08-191108/: plan.md
09-191115/: NOTES.md  plan.md
10-191122/: plan.md
11-191129/: plan.md
12-191206/: plan.md
13-191213/: plan.md
14-200114/: plan.md
15-200121/: plan.md
16-200128/: missed.md  plan.md
17-200204/: next.md  plan.md
18-200211/: next.md  plan.md
19-200218/: missed.md  next.md  plan.md
20-200225/: next.md  plan.md
21-200303/: plan.md
22-200310/: plan.md
23-200312/: plan.md
24-200407/: plan.md  presentation.html  presentation.md
25-200414/: missed.md  plan.md  presentation.html  (+1 more)
29-200519/code/: CMakeLists.txt
29-200519/code/01-async/: 01-thread.cpp  02-thread-args.cpp  03-thread-args-ref.cpp  04-thread-args-std-ref.cpp  05-make-tuple.cpp
29-200519/code/02-perfect/: 03-timed-ref-better.cpp  04-forwarding-ref.cpp  05-timed-ref-perfect.cpp  06-timed-exceptions.cpp  07-timed-retval.cpp  08-decltype-auto.cpp
29-200519/code/03-variadic/: 01-syntax.cpp  02-perfect.cpp  03-perfect-lambda.cpp
29-200519/code/04-examples/: 01-forward-as-tuple.cpp
(+227 files in other folders)
